--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
-  "prettier.singleQuote": true,
+  "liveSassCompile.settings.generateMap": false,
+  "liveSassCompile.settings.includeItems": ["/styles/scss/*.scss"],
+  "liveSassCompile.settings.formats": [
+    // This is the default.
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+
+      // null for all three -> denotes the same path as the SASS file
+      "savePath": "./styles/"
+    }
+  ],
   "prettier.semi": false,
-  "prettier.tabWidth": 2
+  "prettier.singleQuote": true,
+  "prettier.tabWidth": 2,
+  "prettier.printWidth": 150
 }
