Various fix + minor design change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "liveSassCompile.settings.generateMap": false,
+  "liveSassCompile.settings.generateMap": true,
   "liveSassCompile.settings.includeItems": ["/styles/scss/*.scss"],
   "liveSassCompile.settings.formats": [
     // This is the default.
