--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-window-size-hook": "^1.0.3",
+    "slugify": "^1.6.5",
     "swiper": "^8.1.4"
   },
   "devDependencies": {
