--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.3",
+    "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
