--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
     "atropos": "^1.0.2",
-    "axios": "^0.27.2",
+    "axios": "^1.6.8",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.3",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-window-size-hook": "^1.0.3",
     "slugify": "^1.6.5",
     "swiper": "^8.1.4"
@@ -26,6 +26,6 @@
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^14.2.2"
   }
 }
